--- a/app/views/counter_reports/without_customer_id/master_view/_form.html.erb
+++ b/app/views/counter_reports/without_customer_id/master_view/_form.html.erb
@@ -45,10 +45,10 @@
         <select name="data_types[]" aria-label="Date Type" class="form-control" multiple size=<%= size %>>
 <!--          Fulcrum currently does NOT support Journals-->
 <!--          <option value="Article">Article</option>-->
-          <option value="Book">Book</option>
+          <option value="Book" selected>Book</option>
           <% if report_id == 'ir' %>
-            <option value="Book_Segment">Book Segment</option>
-            <option value="Multimedia">Multimedia</option>
+            <option value="Book_Segment" selected>Book Segment</option>
+            <option value="Multimedia" selected>Multimedia</option>
 <!--            Currently not being used in Fulcrum-->
 <!--            <option value="Other">Other</option>-->
           <% end %>
@@ -85,7 +85,7 @@
       <div class="col-sm-4">
         <select name="access_types[]" aria-label="Access Type" class="form-control" multiple size=2>
           <option value="Controlled" selected>Controlled</option>
-          <option value="OA_Gold">OA_Gold</option>
+          <option value="OA_Gold" selected>OA_Gold</option>
 <!--          Fulcrum currently does NOT support this access type.-->
 <!--          <option value="Other_Free_To_Read">Other Free To Read</option>-->
         </select>
@@ -95,7 +95,7 @@
       <label for="access_methods" class="col-sm-2 col-form-label">Access Methods</label>
       <div class="col-sm-4">
         <select name="access_methods[]" aria-label="Access Methods" class="form-control" multiple size=1>
-          <option value="Regular">Regular</option>
+          <option value="Regular" selected>Regular</option>
 <!--          Fulcrum does NOT currently support this access method.-->
 <!--          <option value="TDM">Text and Data Mining (TDM)</option>-->
         </select>
@@ -118,8 +118,8 @@
           <% if report_id == 'pr' %>
             <option value="Searches_Platform">Searches Platform</option>
           <% end %>
-          <option value="Total_Item_Investigations" selected>Total Item Investigations</option>
-          <option value="Total_Item_Requests">Total Item Requests</option>
+          <option value="Total_Item_Investigations">Total Item Investigations</option>
+          <option value="Total_Item_Requests" selected>Total Item Requests</option>
           <option value="Unique_Item_Investigations">Unique Item Investigations</option>
           <option value="Unique_Item_Requests">Unique Item Requests</option>
           <% unless report_id == 'ir' %>
@@ -151,19 +151,19 @@
       %>
       <select name="attributes_to_show[]" aria-label="Include Columns" class="form-control" multiple size=<%= size %>>
         <% if report_id == 'ir' %>
-          <option value="Authors">Authors</option>
-          <option value="Publication_Date">Publication Date</option>
+          <option value="Authors" selected>Authors</option>
+          <option value="Publication_Date" selected>Publication Date</option>
           <option value="Article_Version">Article Version</option>
         <% end %>
-        <option value="Data_Type">Data Type</option>
+        <option value="Data_Type" selected>Data Type</option>
         <% if report_id == 'tr' %>
-          <option value="Section_Type">Section Type</option>
+          <option value="Section_Type" selected>Section Type</option>
         <% end %>
         <% unless report_id == 'pr' %>
-          <option value="YOP">Year of Publication (YOP)</option>
+          <option value="YOP" selected>Year of Publication (YOP)</option>
         <% end %>
-        <option value="Access_Type">Access Type</option>
-        <option value="Access_Method">Access Method</option>
+        <option value="Access_Type" selected>Access Type</option>
+        <option value="Access_Method" selected>Access Method</option>
       </select>
     </div>
   </div>
@@ -171,7 +171,7 @@
       <div class="form-group row">
         <label for="include_parent_details" class="col-sm-2 col-form-label">Include Parent Details</label>
         <div class="col-sm-1">
-          <input type="checkbox" name="include_parent_details" aria-label="Include Parent Details" value=true class="form-control" />
+          <input type="checkbox" name="include_parent_details" aria-label="Include Parent Details" value=true checked class="form-control" />
         </div>
       </div>
       <div class="form-group row">
