--- a/app/views/epub_ebooks/show.html.erb
+++ b/app/views/epub_ebooks/show.html.erb
@@ -42,8 +42,8 @@
   <div class="too" id="epub">
     
     <div class="nm--toolbar">
-      <div id="action-close" class="cozy-control cozy-panel-close">
-        <a class="cozy-close cozy-control" href="<%= @back_link %>" title="Close reader and return to previous page" data-toggle="button" data-slot="label" aria-label="Close reader">
+      <div id="action-close" class="cozy-control">
+        <a class="cozy-close cozy-control" href="<%= @back_link %>" title="Close reader and return to previous page" aria-label="Close reader">
           <i class="icon-x oi" data-glyph="x" aria-hidden="true"></i>
         </a>
       </div>
@@ -56,7 +56,7 @@
           <i class="icon-magnifying-glass oi" data-glyph="magnifying-glass" title="Search" aria-hidden="true"></i>
       </button>
 
-      <button id="action-notes" class="button--sm notes-panel" data-toggle="open" aria-label="Notes">
+      <button id="action-notes" class="button--sm panel-closed" data-toggle="open" aria-label="Notes">
           <i class="icon-document oi" data-glyph="document" title="Notes and Definitions" aria-hidden="true"></i>
       </button>
 
@@ -65,7 +65,6 @@
             <i class="icon-map oi" data-glyph="map" aria-hidden="true"></i>
         </a>
       </div>
-
 
       <div id="action-resources" class="cozy-control cozy-panel-resources">
         <a class="cozy-control" href="<%= @parent_presenter.catalog_url + '#resources' %>" target="_blank">
@@ -86,7 +85,9 @@
 
     </div>
 
-    <div class="nm--panels" data-modal-actived="false"></div>
+    <div class="nm--panels" data-modal-actived="false">
+      <%= render "cozy_pdec_notes", presenter: @presenter, parent_presenter: @parent_presenter %>
+    </div>
     <div class="nm--reader" id="reader"></div>
 
     <script type="text/javascript">
@@ -172,6 +173,10 @@
 
         <%= render "cozy_controls_bottom", presenter: @presenter, parent_presenter: @parent_presenter %>
 
+        <%= render "cozy_controls_notes", presenter: @presenter, parent_presenter: @parent_presenter %>
+
+        <%= render "cozy_controls_tools", presenter: @presenter, parent_presenter: @parent_presenter %>
+
         // Annotation widget checks and initialization
         <% if %w[michigan cjs cseas csas lrccs ummaa].include? @subdomain %>
         var tm;
@@ -200,130 +205,6 @@
 
         <% end %>
 
-        // notes
-        // function for opening panel like gabii open_panel()
-        // functions for getting content and building out panel
-            // displayed with headings and accordians in a list
-            // definitions
-                // build list
-                // display content
-            // translator notes
-                // build list
-                // display content
-            // historical characters
-                // build list
-                // display content
-        // event listeners for links in epub
-        // function for opening notes panel when a notes link is clicked
-            //var epubClickHandler = function(event) {
-            //    if (event.target.hasAttribute('data-tid')) {
-            //        var s = event.target.getAttribute('data-tid');
-            //    } else {
-            //    var s = event.target.getAttribute('data-uid');
-            //    }
-            // send note href data to panel
-            // open panel and display matching note
-            //}
-        // get all the links for the notes and listen for clicks 
-        // reader.on('ready:contents', function(contents) {
-        // var links = contents.content.querySelectorAll(" ## list of attribute selectors ##");
-        // for(var i=0, n= = links.length; i < n; i++){
-        // var link = links[i];
-        // link.addEventListener('click', epubClickHandler);
-        //}
-        //})
-        
-        // notes panel
-        var openNotesPanel = function() {
-          var $notes = $("#nm--panels");
-          var $book = $(".cozy-module-book-cover");
-          closeNotesPanel();
-          //$("body").addClass("panel-open panel-right");
-
-          var $notesPanel = $('.notes-panel');
-
-          if (! $notesPanel.length) {
-
-              var $notesPanelContent =
-                  '<div class="notes-panel" aria-hidden="false">' +
-                      '<div class="panel-control">' +
-                      '</div>' +
-                  '</div>';
-              $notesPanel = $($notesPanelContent).appendTo($notes);
-          } else {
-              $notesPanel.show();
-              $('.notes-panel').prop('hidden', false);
-              $('.notes-panel').attr('aria-hidden', 'false');
-          }
-
-          // resize EPUB
-          setTimeout(function() {
-              window.dispatchEvent(new Event('resize'));
-          }, 0);
-
-          notes_toggle.state('close-notes');
-        } // end open_panel
-
-        // close panel function
-        var closeNotesPanel = function() {
-            var $notesPanel = $('.notes-panel');
-            if ($notesPanel.length) {
-                $('.notes-panel').hide();
-                //$('body').removeClass('panel-open');
-                //$('body').removeClass('panel-right');
-                $('.notes-panel').prop('hidden', true);
-                $('.notes-panel').attr('aria-hidden', 'true');
-                
-                setTimeout(function() {
-                    window.dispatchEvent(new Event('resize'));
-                }, 0);
-            }
-            notes_toggle.state('open-notes');
-        }
-
-
-        // text tools
-        var tools_panel = function() {
-          var $textToolsLocation = $(".cozy-module-bottom");
-
-          var $textTools = $('.cozy-text-tools');
-
-          var $textPanelContent = 
-            '<div class="cozy-text-tools">' +
-                '<div class="versions">' +
-                    '<fieldset class="text-tools">' +
-                        '<div>Version display</div>' +
-                        '<div class="check checkbox--svg"><input class="sr-only" type="checkbox" id="french" name="french" checked>' +
-                            '<label class="svg" for="french">' +
-                                '<svg viewBox="0 0 100 100"><path class="path" fill="none" stroke="#000" stroke-width="13" d="M12.1 52.1l24.4 24.4 53-53"/></svg>' +
-                                'Française</label></div>' +
-                        '<div class="check checkbox--svg"><input class="sr-only" type="checkbox" id="english" name="english" checked>' +
-                            '<label class="svg" for="english">' +
-                                '<svg viewBox="0 0 100 100"><path class="path" fill="none" stroke="#000" stroke-width="13" d="M12.1 52.1l24.4 24.4 53-53"/></svg>' +
-                                'English</label></div>' +
-                    '</fieldset>' +
-                '</div>' +
-                '<div class="tools">' +
-                    '<fieldset class="text-tools">' +
-                        '<div>Text Tools</div>' +
-                        '<div class="check checkbox--svg"><input class="sr-only" type="checkbox" id="passages" name="passages">' +
-                            '<label class="svg" for="passages">' +
-                                '<svg viewBox="0 0 100 100"><path class="path" fill="none" stroke="#000" stroke-width="13" d="M12.1 52.1l24.4 24.4 53-53"/></svg>' +
-                                'Show key passages</label></div>' +
-                        '<div class="check checkbox--svg"><input class="sr-only" type="checkbox" id="terms" name="terms">' +
-                            '<label class="svg" for="terms">' +
-                                '<svg viewBox="0 0 100 100"><path class="path" fill="none" stroke="#000" stroke-width="13" d="M12.1 52.1l24.4 24.4 53-53"/></svg>' +
-                                'Show frequently used terms</label></div>' +
-                        '<div class="check checkbox--svg"><input class="sr-only" type="checkbox" id="definitions" name="definitions">' +
-                            '<label class="svg" for="definitions">' +
-                                '<svg viewBox="0 0 100 100"><path class="path" fill="none" stroke="#000" stroke-width="13" d="M12.1 52.1l24.4 24.4 53-53"/></svg>' +
-                                'Show words with definitions</label></div>' +
-                    '</fieldset>' +
-                '</div>' +
-            '</div>';
-
-          $textTools = $($textPanelContent).prependTo($textToolsLocation);
-        }
 
         reader.on('ready:contents', function(contents) {
           var frenchTexts =  contents.document.querySelectorAll(".french");
@@ -420,6 +301,12 @@
 
             });
 
+            //find links to notes panel
+            var links = contents.content.querySelectorAll("a[data-note-type='definition']");
+            for(var i =0, n = links.length; i < n; i++) {
+              var link = links[i];
+              link.addEventListener('click', click_handler);
+            }
         });
 
         // Initiate EPUB Reader
@@ -428,6 +315,9 @@
         reader.start(function () {
           console.log('-- started');
           tools_panel();
+          formatSections();
+          formatNotes();
+          formatDefinitions();
         });
 
         reader.on('resized', function () {
